--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
+				<li><a href="/projects">Projects</a></li>
+				<li><a href="/certificates"> Certificates</a></li>
+	        		<li><a href="/cv"> Download CV</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
