--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
+		        	<li><a href="/aboutme">About</a></li>
 				<li><a href="/projects">Projects</a></li>
 				<li><a href="/certificates"> Certificates</a></li>
 	        		<li><a href="/cv"> Download CV</a></li>
