--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 	    		<ul>
 	        		<li><a href="mailto:aryanverma@iitg.ac.in">email</a></li>
 	        		<li><a href="https://github.com/AryanVerma2204">github</a></li>
+				<li><a href="https://www.linkedin.com/in/aryan-verma-99b3a1195/">LinkedIn</a></li>
 				</ul>
 			</footer>
 		</body>
