--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:aryanverma@iitg.ac.in">email</a></li>
-	        		<li><a href="https://github.com/AryanVerma2204">github</a></li>
+	        		<li><a href="mailto:aryanverma@iitg.ac.in">Email</a></li>
+	        		<li><a href="https://github.com/AryanVerma2204">GitHub</a></li>
 				<li><a href="https://www.linkedin.com/in/aryan-verma-99b3a1195/">LinkedIn</a></li>
 				</ul>
 			</footer>
